<!-- Copyright (C) 2015 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- User's name. -->
    <string name="name">Name</string>

    <!-- Title for the application. -->
    <string name="app_name">All About Anime!</string>

    <!-- Welcome Message -->
    <string name="welcome">Welcome Anime Lovers \nTime to test your anime knowledge!</string>

    <!-- Text display for ques 1 -->
    <string name="q1">Q.1: What is the full name of the male lead of Kaichou Wa Maid Sama?</string>

    <!-- Text display for ques 2 -->
    <string name="q2">Q.2: What two companies currently hold copyrights to \"Dragon Ball\", \"Dragon Ball Z\", and \"Dragon Ball GT\"?</string>

    <!-- Text display for ques 3 -->
    <string name="q3">Q.3: What do characters (in the original sub-titled episodes of any anime) always put behind a close girl friend\'s name?</string>

    <!-- Text display for ques 4 -->
    <string name="q4">Q.4: Which of the following anime series was not combined to make \"Robotech\" in the USA?</string>

    <!-- Text display for ques 5 -->
    <string name="q5">Q.5: In \"Dragonball Z\" how many years have lapsed between the other world tournament and the time when the episode Gohan goes to high school?</string>

    <!-- Text display for ques 6 -->
    <string name="q6">Q.6: What Disney movie is said to bare a striking resemblance to an old Japanese animated series?</string>

    <!-- Text display for ques 7 -->
    <string name="q7">Q.7: In Ouran High School Host Club, what are the twin\'s names?</string>

    <!-- Text display for ques 8 -->
    <string name="q8">Q.8: In Beezlebub, what is the baby?</string>

    <!-- Text display for ques 9 -->
    <string name="q9">Q.9: In Fairytail, what is Lucy Heartfilia?</string>

    <!-- Text display for ques 10 -->
    <string name="q10">Q.10: What are the monsters in Bleach called?</string>

    <!-- Hint text display of answers for ques 1 -->
    <string name="q1a1">Usui Takumi</string>
    <string name="q1a2">Himura Kenshin</string>

    <!-- Hint text display of answers for ques 2  -->
    <string name="q2a1">Funimation And Pioneer</string>
    <string name="q2a2">Funimation And Toei</string>

    <!-- Hint text display of answers for ques 3  -->
    <string name="q3a1">Chusu</string>
    <string name="q3a2">Chan</string>

    <!-- Hint text display of answers for ques 4  -->
    <string name="q4a1">Genesis Climber Mospeada</string>
    <string name="q4a2">Mobile Suit Gundam</string>

    <!-- Hint text display of answers for ques 5  -->
    <string name="q5a1">20 years</string>
    <string name="q5a2">7 years</string>

    <!-- Hint text display of answers for ques 6  -->
    <string name="q6a1">The Lion King</string>
    <string name="q6a2">Mulan</string>

    <!-- Hint text display of answers for ques 7 -->
    <string name="q7a1">Kiko and Leon</string>
    <string name="q7a2">Hikaru and Kaoru</string>

    <!-- Hint text display of answers for ques 8 -->
    <string name="q8a1">The devil\'s son</string>
    <string name="q8a2">Son of a demon king</string>

    <!-- Hint text display of answers for ques 9 -->
    <string name="q9a1">A key mage</string>
    <string name="q9a2">An ice mage</string>

    <!-- Hint text display of answers for ques 10 -->
    <string name="q10a1">Ragnerok</string>
    <string name="q10a2">Hollows</string>

    <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
    <string name="submit">Submit</string>

</resources>